# imagination-kit

./: pyproject.toml
imk/: imk_collections.py  imk_confluence.py  imk_gpt.py  imk_io.py  imk_s100.py
modules/notebook/backend/: .env.example  pyproject.toml
modules/notebook/backend/app/engine/: __init__.py
modules/notebook/backend/config/: tools.yaml
modules/notebook/backend/data/collaboration/: delter.md
modules/notebook/backend/data/input/: arkham.md  backtesting.md  blockchain.md  buy-a-disk.md  chain-analysis.md  conway-design.md  demo-trading.md  geth.md  gokarting.md  hello.md  hello.txt  learning.md  llm-optimization.md  mathematics.md  moonshots.md  onboarding.md  performance.md  post-trade-analysis.md  potree-design.md  rust.md  setup.md  strategies.md  tmux.md  wk1.md  zsh.md
modules/notebook/backend/data/learning/: llm-details.md
modules/notebook/frontend/: package-lock.json  package.json
modules/notebook/frontend/config/: tools.json
notebooks/: play_with_gpt1.ipynb  test_gpt.ipynb
notebooks/learn/: llama_index.ipynb
notebooks/learn/data/: llama_index.md
notebooks/learn/storage/: default__vector_store.json  docstore.json  index_store.json
